Added Player statistics page and fixed 2ns innings start flow
