# apps/server/openapi.yaml
@@ -1032,6 +1032,12 @@ paths:
                   maximum: 9007199254740991
                   minimum: -9007199254740991
                   type: integer
+                playerOfTheTournamentId:
+                  anyOf:
+                    - maximum: 9007199254740991
+                      minimum: -9007199254740991
+                      type: integer
+                    - type: "null"
                 season:
                   anyOf:
                     - type: string
@@ -1240,6 +1246,13 @@ paths:
                       minimum: -9007199254740991
                       type: integer
                   type: object
+                playerOfTheTournamentId:
+                  anyOf:
+                    - exclusiveMinimum: 0
+                      maximum: 9007199254740991
+                      minimum: -9007199254740991
+                      type: integer
+                    - type: "null"
                 season:
                   maxLength: 50
                   type: string
@@ -2408,6 +2421,27 @@ paths:
                   - {}
                   - not: {}
           description: OK
+  /playerStatistics:
+    post:
+      operationId: playerStatistics
+      requestBody:
+        content:
+          application/json:
+            schema:
+              exclusiveMinimum: 0
+              maximum: 9007199254740991
+              minimum: -9007199254740991
+              type: integer
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                anyOf:
+                  - {}
+                  - not: {}
+          description: OK
   /playersWithCurrentTeams:
     post:
       operationId: playersWithCurrentTeams
@@ -3184,6 +3218,27 @@ paths:
                   - {}
                   - not: {}
           description: OK
+  /tournamentPlayers:
+    post:
+      operationId: tournamentPlayers
+      requestBody:
+        content:
+          application/json:
+            schema:
+              exclusiveMinimum: 0
+              maximum: 9007199254740991
+              minimum: -9007199254740991
+              type: integer
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                anyOf:
+                  - {}
+                  - not: {}
+          description: OK
   /tournaments:
     post:
       operationId: tournaments
@@ -3882,6 +3937,12 @@ paths:
                       maximum: 9007199254740991
                       minimum: -9007199254740991
                       type: integer
+                    playerOfTheTournamentId:
+                      anyOf:
+                        - maximum: 9007199254740991
+                          minimum: -9007199254740991
+                          type: integer
+                        - type: "null"
                     season:
                       anyOf:
                         - type: string
@@ -4094,6 +4155,13 @@ paths:
                       minimum: -9007199254740991
                       type: integer
                   type: object
+                playerOfTheTournamentId:
+                  anyOf:
+                    - exclusiveMinimum: 0
+                      maximum: 9007199254740991
+                      minimum: -9007199254740991
+                      type: integer
+                    - type: "null"
                 season:
                   maxLength: 50
                   type: string
